meego-keyboard (0.5.38~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#237330

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 30 Mar 2011 17:34:47 +0300

meego-keyboard (0.5.37-1) unstable; urgency=low

  * Fixes: NB#236919 - [TASK] Messaging UI Send button doesn't contain blue background

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 30 Mar 2011 17:27:42 +0300

meego-keyboard (0.5.36-1) unstable; urgency=low

  * Fixes: NB#233383 - [TASK] Utilize the empty space next to the right/left side of the VKB efficiently (POT)
  * Fixes: NB#210004 - Predictive text is not effective
  * Fixes: NB#240662 - Label overwrite not working if MTextEdit::setContentType(M::NumberContentType) set
  * Fixes: NB#224052 - Dead keys get stuck

 -- huaming wang <huaming.wang@nokia.com>  Wed, 30 Mar 2011 10:26:27 +0300

meego-keyboard (0.5.35-1) unstable; urgency=low

  * Fixes: NB#237202 - Completely transparent assets are referenced
  * Fixes: NB#238301 - Half English Title showing when switch from Chinese Keyboard to Western Keyboard
  * Fixes: NB#236919 - [TASK] Messaging UI Send button doesn't contain blue background

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Thu, 24 Mar 2011 13:35:39 +0200

meego-keyboard (0.5.35~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#237202 - Completely transparent assets are referenced
  * Fixes: NB#238301 - Half English Title showing when switch from Chinese Keyboard to Western Keyboard
  * Fixes: NB#236919 - [TASK] Messaging UI Send button doesn't contain blue background

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 16 Mar 2011 16:21:39 +0200

meego-keyboard (0.5.34-1) unstable; urgency=low

  * Fixes: NB#232103 - Caps mode to be ON in VKB while renaming a video
  * Fixes: NB#235444 - E-mail/URL VKB layout gets stuck when adding another layout in settings
  * Fixes: NB#235743 - VKB is disappearing for 1-2secs when its view changed from sym view to main view after device rotation.
